# Air-Flow-Sim

./: .replit  app.py  package-lock.json  package.json  pyproject.toml  replit.md  users.db
.streamlit/: config.toml
attached_assets/: Pasted--Instrucciones-para-modificar-la-simulaci-n-de-c-rculos_1772850345145.txt  Pasted-1-Primero-cancela-lo-que-tengas-y-haz-esto-En-Replit-ha_1769919149182.txt  Pasted-Actualiza-la-funcionalidad-Mostrar-flujo-de-aire-l-neas_1775079498902.txt  Pasted-Agrega-una-nueva-funcionalidad-al-simulador-de-flujo-de_1774201769451.txt  Pasted-Agrega-una-nueva-funcionalidad-al-simulador-de-flujo-de_1774201864974.txt  Pasted-Agrega-una-nueva-funcionalidad-en-el-simulador-de-flujo_1774749354181.txt  Pasted-Ahora-actualiza-la-tabla-de-sensaci-n-t-rmica-con-los-d_1774741091308.txt  Pasted-Ampl-a-la-funcionalidad-de-guardado-de-proyectos-para-q_1775771133700.txt  Pasted-AttributeError-int-object-has-no-attribute-encode-Trace_1772845356910.txt  Pasted-Corrige-la-tabla-de-sensaci-n-t-rmica-con-los-datos-exa_1774741791112.txt  Pasted-Desarrolla-una-aplicaci-n-web-completa-con-Streamlit-y-_1772846625743.txt  Pasted-El-canvas-sigue-parpadeando-al-dibujar-dos-c-rculos-La-_1775775279317.txt  Pasted-El-problema-persiste-cuando-selecciono-un-proyecto-un-u_1775779505663.txt  Pasted-Implementa-el-selector-de-tema-Dark-Light-en-la-esquina_1775768977621.txt  Pasted-Implementa-los-siguientes-cambios-en-el-simulador-de-fl_1773528978940.txt  Pasted-Los-c-rculos-ventiladores-de-techo-se-mantienen-fijos-e_1775776401144.txt  (+15 more)
client/: requirements.md
pages/: mis_planos.py  (+2 more)
(+27 files in other folders)
