[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "streamlit>=1.53.1",
    "streamlit-drawable-canvas>=0.9.3",
]
